--- a/basketball-counter/court-counter/src/main/AndroidManifest.xml
+++ b/basketball-counter/court-counter/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="example.az.basketballcounter">
+    package="example.az.court_counter">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="example.az.court_counter.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
